fix viewport height issue on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,20 @@ body {
   margin: 0;
 }
 
+#container {
+  height: 100vh;
+  width: 100vw;
+}
+
+/* Hack to work around scrolling URL bar vh behaviour in Chrome Android */
+#container {
+  @supports (-webkit-appearance: none) {
+    .os-android & {
+      height: calc(100vh - 56px);
+    }
+  }
+}
+
 .controlButton {
   background-color: transparent;
   border: none;
